--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html dir="ltr" lang="en-US">
 
 <head>
-
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="" />
+	<meta name="author" content="DTS Life Consultant Pte Ltd" />
+	<meta name="description" content="Professional grave exhumation services in Singapore by DTS Life Consultant Pte Ltd. Specializing in respectful relocation of remains, cemetery exhumations, reburials, and cremations, we ensure full compliance with legal, cultural, and environmental standards. Trusted experts for efficient and dignified exhumation solutions. Contact us today for personalized assistance."/>
 
 	<!-- Stylesheets
 	============================================= -->
@@ -24,7 +24,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>DTS Life Consultant Pte Ltd </title>
+	<title>Professional Grave Exhumation Singapore | DTS Life Consultant Pte Ltd</title>
 
 	<style>
 		.menu-link:hover {
