--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 																<h3 class="mb-0 font-weight-normal">Price</h3>
 															</div>
 															<div class="col-12 text-center">
-																<h2 class="mb-0 color">$1,800 - $3,388</h2>
+																<h2 class="mb-0 color">S$1,800 - S$3,388</h2>
 															</div>
 														</div>
 													</div>
@@ -337,7 +337,7 @@
 																<h3 class="mb-0 font-weight-normal">价格</h3>
 															</div>
 															<div class="col-12 text-center">
-																<h2 class="mb-0 color">$1,800 - $3,388</h2>
+																<h2 class="mb-0 color">S$1,800 - S$3,388</h2>
 															</div>
 														</div>
 													</div>
@@ -472,7 +472,7 @@
 										<a href="#"><i class="icon-phone3"></i></a>
 									</div>
 									<div class="fbox-content">
-										<h3>Call / Whatsapp Us<span class="subtitle">(+65) 85004104</span></h3>
+										<h3>Call / Whatsapp Us<span class="subtitle"><a href="https://wa.me/6585004104">(+65) 85004104</a></span></h3>
 									</div>
 								</div>
 							</div>
@@ -522,7 +522,7 @@
 
 				<div class="row justify-content-center align-items-center col-mb-30">
 					<div class="col-12 col-lg-auto text-center text-lg-left">
-						Copyrights &copy; 2024 All Rights Reserved by DTS Life Consultant Pte Ltd.
+						Copyrights &copy; 2025 All Rights Reserved by DTS Life Consultant Pte Ltd.
 					</div>
 				</div>
 
