--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="css/colors.php?color=f0a540" type="text/css" />
 
+
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16816777307">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16816777307');
+</script>
 	<!-- Document Title
 	============================================= -->
 	<title>Professional Grave Exhumation Singapore | DTS Life Consultant Pte Ltd</title>
