--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html dir="ltr" lang="en-US">
 
 <head>
+
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="author" content="DTS Life Consultant Pte Ltd" />
-	<meta name="description" content="Professional grave exhumation services in Singapore by DTS Life Consultant Pte Ltd. Specializing in respectful relocation of remains, cemetery exhumations, reburials, and cremations, we ensure full compliance with legal, cultural, and environmental standards. Trusted experts for efficient and dignified exhumation solutions. Contact us today for personalized assistance."/>
+	<meta name="author" content="" />
 
 	<!-- Stylesheets
 	============================================= -->
@@ -22,20 +22,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="css/colors.php?color=f0a540" type="text/css" />
 
-
-	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16816777307">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-16816777307');
-</script>
 	<!-- Document Title
 	============================================= -->
-	<title>Professional Grave Exhumation Singapore | DTS Life Consultant Pte Ltd</title>
+	<title>DTS Life Consultant Pte Ltd </title>
 
 	<style>
 		.menu-link:hover {
@@ -87,6 +76,13 @@
 		.owl-carousel .owl-dots .owl-dot.active {
 			background-color: white !important;
 			opacity: 1 !important;
+		}
+
+		#package-slide .owl-dots .owl-dot{
+			border: 1px solid #0c4da2!important;
+		}
+		#package-slide .owl-dots .owl-dot.active{
+			background-color: #0c4da2!important;
 		}
 
 		.owl-carousel .owl-nav [class*=owl-]:hover {
@@ -279,7 +275,7 @@
 																<h3 class="mb-0 font-weight-normal">Price</h3>
 															</div>
 															<div class="col-12 text-center">
-																<h2 class="mb-0 color">S$1,800 - S$3,388</h2>
+																<h2 class="mb-0 color">$1,800 - $3,388</h2>
 															</div>
 														</div>
 													</div>
@@ -348,7 +344,7 @@
 																<h3 class="mb-0 font-weight-normal">价格</h3>
 															</div>
 															<div class="col-12 text-center">
-																<h2 class="mb-0 color">S$1,800 - S$3,388</h2>
+																<h2 class="mb-0 color">$1,800 - $3,388</h2>
 															</div>
 														</div>
 													</div>
@@ -357,6 +353,14 @@
 											<p class="text-center mt-2 text-danger w-100">若发现完整尸体，将额外收取$800的棺材费用</p>
 										</div>
 									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row justify-content-center mx-0">
+							<div class="col-lg-10">
+								<div id="package-slide" class="owl-carousel carousel-widget" data-margin="0" data-items="1" data-animate-in="zoomIn" data-speed="450" data-animate-out="fadeOut" data-dots="true">
+									<a href="#"><img src="images/package-slide-1.jpg" alt="Slider"></a>
+									<a href="#"><img src="images/package-slider-2.jpg" alt="Slider"></a>
 								</div>
 							</div>
 						</div>
@@ -483,7 +487,7 @@
 										<a href="#"><i class="icon-phone3"></i></a>
 									</div>
 									<div class="fbox-content">
-										<h3>Call / Whatsapp Us<span class="subtitle"><a href="https://wa.me/6585004104">(+65) 85004104</a></span></h3>
+										<h3>Call / Whatsapp Us<span class="subtitle">(+65) 85004104</span></h3>
 									</div>
 								</div>
 							</div>
@@ -533,7 +537,7 @@
 
 				<div class="row justify-content-center align-items-center col-mb-30">
 					<div class="col-12 col-lg-auto text-center text-lg-left">
-						Copyrights &copy; 2025 All Rights Reserved by DTS Life Consultant Pte Ltd.
+						Copyrights &copy; 2024 All Rights Reserved by DTS Life Consultant Pte Ltd.
 					</div>
 				</div>
 
