--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 									 background-color: white; border-radius: 20px">
 										<div class="package-div row mx-0 justify-content-center col-lg-10 m-font">
 											<div class="package-details">
-												<p class="mb-3 font-weight-bold">1) 申请掘墓服务</p>
+												<p class="mb-3 font-weight-bold">1) 申请墓穴迁移服务</p>
 												<p class="mb-2 font-weight-bold">2) 选择吉日吉时进行掘墓</p>
 												<ul class="ml-5 mb-3">
 													<li>破土仪式</li>
