--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="" />
-
+	<meta name="description" content="DTS Life Consultant Pte Ltd provides grave exhumation services and is a leading provider of professional and compassionate grave exhumation services in Singapore. We specialize in the careful and respectful relocation of human remains, whether for reburial, legal purposes, or site redevelopment. Our services are fully compliant with Singapore's regulations, and we ensure that every process is handled with the utmost care, sensitivity, and respect. With extensive experience, we serve funeral directors, legal professionals, and families, providing a reliable and discreet solution for all exhumation needs." />
 	<!-- Stylesheets
 	============================================= -->
 	<link rel="icon" href="images/dts-favicon.jpg" />
