--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 										<div class="package-div row mx-0 justify-content-center col-lg-10 m-font">
 											<div class="package-details">
 												<p class="mb-3 font-weight-bold">1) 申请墓穴迁移服务</p>
-												<p class="mb-2 font-weight-bold">2) 选择吉日吉时进行掘墓</p>
+												<p class="mb-2 font-weight-bold">2) 师父选择黄道吉日迁移</p>
 												<ul class="ml-5 mb-3">
 													<li>破土仪式</li>
 													<li>遗骸挖掘</li>
