--- a/index.html
+++ b/index.html
@@ -297,39 +297,41 @@
 										<div class="package-div row mx-0 justify-content-center col-lg-10 m-font">
 											<div class="package-details">
 												<p class="mb-3 font-weight-bold">1) 申请墓穴迁移服务</p>
-												<p class="mb-2 font-weight-bold">2) 师父选择黄道吉日迁移</p>
+												<p class="mb-2 font-weight-bold">2) 师父选择黄道吉日服务</p>
 												<ul class="ml-5 mb-3">
-													<li>破土仪式</li>
-													<li>遗骸挖掘</li>
-													<li>骨灰瓮安放</li>
+													<li>A. 破土仪式</li>
+													<li>B. 祖先拾金(需要选择5个好日期）</li>
+													<li>C. 祖先骨灰安置</li>
 												</ul>
 												<p class="mb-2 font-weight-bold">3) 僧人/道士诵经（两次）</p>
 												<ul class="ml-5 mb-3">
-													<li>破土仪式诵经</li>
-													<li>骨灰瓮安放过程中诵经</li>
+													<li>A. 破土仪式诵经</li>
+													<li>B. 骨灰瓮安放过程中诵经</li>
 												</ul>
-												<p class="mb-2 font-weight-bold">4) 供品（2份）</p>
+												<p class="mb-2 font-weight-bold">4) 供品（两份）</p>
 												<ul class="ml-5 mb-3">
-													<li>用于破土仪式和骨灰瓮安放</li>
+													<li>A. 用于破土仪式 </li>
+													<li>B. 骨灰瓮安放</li>
+													<li>(提供素食或荤食)</li>
 												</ul>
 												<p class="mb-2 font-weight-bold">5) 墓穴处理</p>
 												<ul class="ml-5 mb-3">
-													<li>牌匾敲击</li>
-													<li>挖掘</li>
-													<li>封土</li>
-													<li>清理墓碑</li>
+													<li>A. 墓碑敲击</li>
+													<li>B. 泥土挖掘</li>
+													<li>C. 封土</li>
+													<li>D. 清理墓碑</li>
 												</ul>
 												<p class="mb-2 font-weight-bold">6) 祖先遗骸挖掘</p>
 												<ul class="ml-5 mb-3">
-													<li>挖掘</li>
-													<li>骨骼清洗</li>
-													<li>火化</li>
+													<li>A. 开棺挖掘</li>
+													<li>B. 骨骼清洗</li>
+													<li>C. 火化</li>
 												</ul>
 												<p class="mb-2 font-weight-bold">7) 骨灰堂安放</p>
 												<ul class="ml-5 mb-3">
-													<li>陀罗尼被</li>
-													<li>琉璃元宝</li>
-													<li>明砂</li>
+													<li>A. 陀罗尼被</li>
+													<li>B. 琉璃元宝</li>
+													<li>C. 金光明砂</li>
 												</ul>
 											</div>
 											<!-- 备注 -->
