--- a/index.html
+++ b/index.html
@@ -554,7 +554,8 @@
 
 				<div class="row justify-content-center align-items-center col-mb-30">
 					<div class="col-12 col-lg-auto text-center text-lg-left">
-						Copyrights &copy; 2024 All Rights Reserved by DTS Life Consultant Pte Ltd.
+						 &copy; 2025 DTS Life Consultant Pte Ltd. All Rights Reserved. <br/>
+						<p>Powered by <a target="_blank" href="https://adspacestudios.com/?utm_source=website&utm_medium=footer&utm_campaign=dts-landing" style="text-decoration:none !important;">ADspace</a></p>
 					</div>
 				</div>
 
