--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
 			<div class="container">
 
 				<div class="row justify-content-center align-items-center col-mb-30">
-					<div class="col-12 col-lg-auto text-center text-lg-left">
+					<div class="col-12 col-lg-auto text-center text-lg-center">
 						 &copy; 2025 DTS Life Consultant Pte Ltd. All Rights Reserved. <br/>
 						<p>Powered by <a target="_blank" href="https://adspacestudios.com/?utm_source=website&utm_medium=footer&utm_campaign=dts-landing" style="text-decoration:none !important;">ADspace</a></p>
 					</div>
