--- a/index.html
+++ b/index.html
@@ -594,7 +594,8 @@
 			});
 		});
 	</script>
-
+<a href="https://wa.me/6585006104?text=Hello,I would like to enquirer about Grave Exhumation service." target="_blank" rel="noopener noreferrer" class="whatsapp-button"><i
+      class="bi bi-whatsapp"></i></a>
 </body>
 
 </html>
