--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
 			});
 		});
 	</script>
-<a href="https://wa.me/6585004104?text=Hello,I would like to enquirer about Grave Exhumation service." target="_blank" rel="noopener noreferrer" class="whatsapp-button"><i
+<a href="https://wa.me/6585004104?text=Hello,I would like to enquire about Grave Exhumation service." target="_blank" rel="noopener noreferrer" class="whatsapp-button"><i
       class="bi bi-whatsapp"></i></a>
 </body>
 
