--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="author" content="DTS Life Consultant Pte Ltd" />
-	<meta name="title" content="DTS Life Consultant Pte Ltd | Professional Grave Exhumation Service Singapore"/>
-	<meta name="description" content="DTS Life Consultant Pte Ltd provides grave exhumation services and is a leading provider of professional and compassionate grave exhumation services in Singapore. We specialize in the careful and respectful relocation of human remains, whether for reburial, legal purposes, or site redevelopment. Our services are fully compliant with Singapore's regulations, and we ensure that every process is handled with the utmost care, sensitivity, and respect. With extensive experience, we serve funeral directors, legal professionals, and families, providing a reliable and discreet solution for all exhumation needs." />
+	<meta name="title" content="One-Stop Funeral and Grave Exhumation Service Packages | DTS Life Consultant Pte Ltd"/>
+	<meta name="description" content="DTS Life Consultant Pte Ltd provides funeral services and grave exhumation services and is a leading provider of professional and compassionate grave exhumation services in Singapore. We specialize in the careful and respectful relocation of human remains, whether for reburial, legal purposes, or site redevelopment. Our services are fully compliant with Singapore's regulations, and we ensure that every process is handled with the utmost care, sensitivity, and respect. With extensive experience, we serve funeral directors, legal professionals, and families, providing a reliable and discreet solution for all exhumation needs." />
+	<meta name="keywords" content="exhumation Singapore, grave relocation, ancestral exhumation, tomb removal Singapore, funeral services Singapore, Buddhist funeral, Taoist funeral, Christian funeral, columbarium urn placement, embalming service Singapore, coffin and casket Singapore, funeral wake setup, pre-planned funeral, Mandai cremation, funeral director Singapore, DTS exhumation and funeral, HDB funeral setup, affordable funeral Singapore, funeral prayer service, 49-day ritual Singapore, Qing Ming service Singapore, ground-breaking ceremony Singapore, one-stop funeral service Singapore">
 	<!-- Stylesheets
 	============================================= -->
 	<link rel="icon" href="images/dts-favicon.jpg" />
@@ -23,7 +24,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="css/colors.php?color=f0a540" type="text/css" />
 	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-<!-- Google tag (gtag.js) -->
+
+	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16816777307"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -37,10 +39,24 @@
   gtag('event', 'conversion', {'send_to': 'AW-16816777307/FPSaCNDJzP0ZENvQ7tI-'});
 </script>
 
+	<!-- Event snippet for Contact conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+	<script>
+  document.addEventListener('click', function(e) {
+    if (e.target.closest('a[href*="https://wa.me/"]')) {
+      gtag('event', 'conversion', {
+        'send_to': 'AW-16816777307/UziLCLitjqwaENvQ7tI-'
+      });
+    }
+  });
+
+</script>
+
+
 	
 	<!-- Document Title
 	============================================= -->
-	<title>DTS Life Consultant Pte Ltd </title>
+	<title>One-Stop Funeral and Grave Exhumation Service Packages | DTS Life Consultant Pte Ltd</title>
 
 	<style>
 		.menu-link:hover {
