--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
 			});
 		});
 	</script>
-<a href="https://wa.me/6585004104?text=Hello,I would like to enquire about Grave Exhumation service." target="_blank" rel="noopener noreferrer" class="whatsapp-button"><i
+<a href="https://wa.me/6585004104?text=Hello,I would like to enquire about Funeral Package / Grave Exhumation service." target="_blank" rel="noopener noreferrer" class="whatsapp-button"><i
       class="bi bi-whatsapp"></i></a>
 </body>
 
